# armformer

./: .gitignore  CNAME  LICENSE  MANIFEST.in  README.md  index.html  requirements.txt  setup.cfg  setup.py
local_configs/: armformer_config.py
local_configs/_base_/datasets/: thermal_rgb.py
local_configs/_base_/models/: armformer.py
mmseg/: __init__.py
mmseg/datasets/: __init__.py  thermal_rgb.py
mmseg/models/: __init__.py  cbam_attention.py  cbam_backbone.py  cbam_decode_head.py
notebooks/: test.ipynb  train.ipynb
requirements/: runtime.txt
tools/: test.py  train.py
