[metadata]
name = armformer
version = 0.1.0
description = Attention-Refined Mix Vision Transformer for Thermal Weapon Detection
long_description = file: README.md
long_description_content_type = text/markdown
author = ARMFormer Contributors
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.8.0
    torchvision>=0.9.0
    mmcv>=2.0.0,<2.2.0
    mmengine>=0.7.0
    mmsegmentation>=1.0.0
    matplotlib
    numpy
    packaging
    prettytable
    scipy

[options.packages.find]
exclude =
    data*
    work_dirs*
    results*
    *.egg-info

